test_src/compiler_errors/literals/IntTooLargeError6.b
class IntTooLargeError6 {
    void test() {
        println(-0x1234abcd12);
    }
}
